FX Robot mouseMove fails on Windows 10 1709 with HiDPI

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P2
    • jfx11
    • Affects Version/s: 9, 10, jfx11
    • Component/s: javafx
    • Environment:

      Windows 10 version 1709

      To reproduce, run the attached test program on a Windows 10 system with the Windows 10 1709 (the Fall Creators update) with screen scale set to 125% or greater. It will fail to move the mouse to the correct location.

      To compile it, you need the following flag:

      javac --add-exports javafx.graphics/com.sun.glass.ui=ALL-UNNAMED SimpleFXRobotTest.java

      Before you run it, move your mouse to a corner of the screen.

      Note that at least one FX Robot-based test, TabPaneDragPolicyTest, also fails in the same way.

      This seems to be a bug introduced by Microsoft in Windows 10 in the mouse_move function.

      I note that AWT robot also fails similarly.

            Assignee:
            Pankaj Bansal (Inactive)
            Reporter:
            Kevin Rushforth
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: