8196031: FX Robot mouseMove fails on Windows 10 1709 with HiDPI

Reviewed-by: kcr, mbilla